# inferstack-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
monitoring/grafana/dashboards/: inferstack-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
src/: api.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  middleware.rs  model.rs
src/model/: inference.rs  mod.rs  preprocess.rs  routing.rs
tests/: cache.rs  inference.rs  integration.rs  routing.rs
tests/common/: mod.rs  test_app.rs
