[package]
name = "inferstack-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tract-onnx = "0.21.13"
tract-core = "0.21.13"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
dotenvy = "0.15.7"
deadpool-redis = { version = "0.21.1", features = ["config"] }
sha2 = "0.10"
