[package]
name = "inferstack-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.32"
axum = { version = "0.8.9", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tract-onnx = "0.22.1"
tract-core = "0.22.1"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15.7"
deadpool-redis = "0.23.0"
sha2 = "0.11.0"
prometheus = "0.14.0"
prometheus-client = "0.24.1"
axum-prometheus = "0.10.0"
lazy_static = "1.5.0"
rand = "0.10.1"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
hyper = "1.9.0"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["redis"] }
